k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnas
  labels:
    app.kubernetes.io/name: cnas
